--- a/jsf_f1blog_web/WebContent/pages/marcysiox.xhtml
+++ b/jsf_f1blog_web/WebContent/pages/marcysiox.xhtml
@@ -23,9 +23,9 @@
 		      <h1>F1Blog<span>🏎️</span></h1>
 		    </div>
 		    <ul class="nav-menu">
-		      <li class="nav-link selected">
+		      <li class="nav-link">
 				<h:form>
-			    	<h:commandLink value="Blog" action="#" />
+			    	<h:commandLink value="Blog" action="#{blogBB.goToBlog()}" />
 				</h:form>
 		      </li>
 		      <li class="nav-link">
@@ -52,6 +52,24 @@
 		
 		<div class="blog-container">
 			<div class="blog-main">
+		    	<div class="marcysiox">
+		      		<div class="profile">
+		        		<div class="profile-logo">
+		          			<h:graphicImage library="images" name="logo.png" />
+		        		</div>
+		        		<div class="profile-username">
+		          			<h3>Marcysiox</h3>
+		        		</div>
+		      		</div>
+		
+		      		<h4>Administrator</h4>
+		      		<p>
+				        Student Uniwersytetu Ślaskiego na kierunku informatyka. Projektant i
+				        programista aplikacji webowych. Frontend Developer. W wolnym czasie
+				        pasjonat Formuły 1. Prywatnie kibic Maxa Verstappena oraz zespołu
+				        RedBull.
+		      		</p>
+		    	</div>
 		    	<div class="blog-content">
 					<p:dataTable id="blog" value="#{blogBB.allBlog}" var="p">
 						<p:column headerText="Autor" style="width: 20%;">
@@ -77,47 +95,6 @@
 		   		</div>
 		   </div>
 		</div>
-
-		<!-- 
-		
-		DLA ADMINA NA POTEM!!!!!!
-		  
-		  
-		  <div class="blog-main">
-		    {if $user->username == "admin"}
-		    <div class="dodaj-wpis">
-		      <form action="{$conf->action_root}blog" method="post">
-		        <div class="input-wpis">
-		          <textarea
-		            id="mytextarea"
-		            placeholder="Napisz o czym chcesz poinformować fanów..."
-		            name="wpis"
-		          ></textarea>
-		        </div>
-		        <div class="log-btn">
-		          <button type="submit">
-		            <span class="text">Dodaj wpis</span>
-		          </button>
-		        </div>
-		      </form>
-		    </div>
-		    {else} {foreach $lista as $tekstBloga}
-		    <div class="blog-content">
-		      <div class="info">
-		        <div class="avatar">
-		          <img src="{$conf->images}/logo.png" />
-		        </div>
-		        <div class="blog-username">
-		          <h3><a href="{$conf->action_root}marcysiox">Marcysiox</a></h3>
-		        </div>
-		      </div>
-		
-		      <div class="blog-text">{$tekstBloga["tekst"]}</div>
-		    </div>
-		    {/foreach} {/if}
-		  </div>
-		-->
-
 	</ui:define>
 </ui:composition>
 </html>
