--- a/jsf_f1blog_web/WebContent/pages/adminBlog.xhtml
+++ b/jsf_f1blog_web/WebContent/pages/adminBlog.xhtml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -11,28 +10,16 @@
 </h:head>
 
 <ui:composition template="/templates/main-template.xhtml">
-
 	<ui:define name="title">
        	F1Blog
     </ui:define>
 	<ui:define name="content">
-		
 		<div class="navigation">
 		  <nav class="nav-items">
 		    <div class="logoF1">
 		      <h1>F1Blog<span>🏎️</span></h1>
 		    </div>
 		    <ul class="nav-menu">
-		      <li class="nav-link">
-				<h:form>
-			    	<h:commandLink value="Blog" action="#{blogBB.goToBlog()}" />
-				</h:form>
-		      </li>
-		      <li class="nav-link selected">
-		      	<h:form>
-			    	<h:commandLink value="Artykuły" action="#{blogBB.goToArtykuly()}" />
-				</h:form>
-		      </li>
 		      <li class="nav-link">
 		   	  	<h:form>
 			    	<h:commandLink value="Ustawienia" action="#{userBB.goToUstawienia()}" />
@@ -49,28 +36,25 @@
 		    </div>
 		  </nav>
 		</div>
-		
 		<div class="blog-container">
-			<div class="artykul-main">
-		    	<div class="artykul-content" onclick="location.href='artykul1.xhtml'">
-		      		<div class="artykul-img">
-		      			<h:graphicImage library="images" name="2021Max.jpg" />
-		 			</div>
-		      		<div class="artykul-text">
-		        		<h3>Podsumowanie sezonu 2021 - Marcysiox</h3>
-		      		</div>
-		    	</div>
-		
-		    <div class="artykul-content" onclick="location.href='artykul2.xhtml'">
-		    	<div class="artykul-img">
-		    		<h:graphicImage library="images" name="wyniki2022.jpg" />
-		      	</div>
-		      	<div class="artykul-text">
-		        	<h3>Wyniki w sezonie 2022 - Marcysiox</h3>
-		      	</div>
-		    </div>
-		  </div>
+			<div class="blog-main">
+			    <div class="dodaj-wpis">
+			      <h:form>
+			        <div class="input-wpis">
+			          <h:inputTextarea 
+			           placeholder="text"
+			          	value="#{adminBB.blog.tekst}"
+			            id="mytextarea"
+			          ></h:inputTextarea>
+			        </div>
+			        <div class="log-btn">
+			        	<h:commandButton value="Dodaj wpis" styleClass="btn"  action="#{adminBB.dodajWpis()}" />
+			        </div>
+			      </h:form>
+			    </div>	    	
+		   </div>
 		</div>
+
 	</ui:define>
 </ui:composition>
 </html>
