--- a/jsf_f1blog_web/WebContent/pages/blog.xhtml
+++ b/jsf_f1blog_web/WebContent/pages/blog.xhtml
@@ -35,7 +35,7 @@
 		      </li>
 		      <li class="nav-link">
 		   	  	<h:form>
-			    	<h:commandLink value="Ustawienia" action="#{blogBB.goToUstawienia()}" />
+			    	<h:commandLink value="Ustawienia" action="#{userBB.goToUstawienia()}" />
 				</h:form>
 		      </li>
 		      <li class="nav-link">
@@ -77,47 +77,6 @@
 		   		</div>
 		   </div>
 		</div>
-
-		<!-- 
-		
-		DLA ADMINA NA POTEM!!!!!!
-		  
-		  
-		  <div class="blog-main">
-		    {if $user->username == "admin"}
-		    <div class="dodaj-wpis">
-		      <form action="{$conf->action_root}blog" method="post">
-		        <div class="input-wpis">
-		          <textarea
-		            id="mytextarea"
-		            placeholder="Napisz o czym chcesz poinformować fanów..."
-		            name="wpis"
-		          ></textarea>
-		        </div>
-		        <div class="log-btn">
-		          <button type="submit">
-		            <span class="text">Dodaj wpis</span>
-		          </button>
-		        </div>
-		      </form>
-		    </div>
-		    {else} {foreach $lista as $tekstBloga}
-		    <div class="blog-content">
-		      <div class="info">
-		        <div class="avatar">
-		          <img src="{$conf->images}/logo.png" />
-		        </div>
-		        <div class="blog-username">
-		          <h3><a href="{$conf->action_root}marcysiox">Marcysiox</a></h3>
-		        </div>
-		      </div>
-		
-		      <div class="blog-text">{$tekstBloga["tekst"]}</div>
-		    </div>
-		    {/foreach} {/if}
-		  </div>
-		-->
-
 	</ui:define>
 </ui:composition>
 </html>
