--- a/jsf_f1blog_web/WebContent/pages/marcysiox.xhtml
+++ b/jsf_f1blog_web/WebContent/pages/marcysiox.xhtml
@@ -35,7 +35,7 @@
 		      </li>
 		      <li class="nav-link">
 		   	  	<h:form>
-			    	<h:commandLink value="Ustawienia" action="#{blogBB.goToUstawienia()}" />
+			    	<h:commandLink value="Ustawienia" action="#{userBB.goToUstawienia()}" />
 				</h:form>
 		      </li>
 		      <li class="nav-link">
