working artykuly and blog admin

--- a/jsf_f1blog_web/WebContent/pages/artykul2.xhtml
+++ b/jsf_f1blog_web/WebContent/pages/artykul2.xhtml
@@ -57,7 +57,7 @@
 		      	<h:graphicImage library="images" name="wyniki2022.jpg" />
 		      </div>
 		      <div class="artykul1-text">
-		        <h2>Wyniki sezonu 2022</h2>
+		        <h2>Mistrz świata 2022 - Max Vestappen</h2>
 		        <div class="baza2021">
 		        	<p:dataTable id="artyukl" value="#{artykulBB.allWyniki2022}" var="art1">
 		        		<p:column headerText="Grand Prix" style="width: 40%;">
@@ -71,6 +71,135 @@
 		        		</p:column>
 			     	</p:dataTable>
 		        </div>
+		         <div class="artykul1-p">
+			          <h3>REDBULL</h3>
+			          <p>
+			            Red Bull zgarnął w tym sezonie prawie wszystko. Mistrzem świata
+			            został Max Verstappen, a zespół wygrał klasyfikację konstruktorów.
+			            Ponadto trzeci w generalce był Sergio Perez, który do ostatniego
+			            wyścigu walczył z Leclerciem o wicemistrzostwo. Początek sezonu był
+			            jednak nieudany. Po trzech wyścigach Max Verstappen tracił do
+			            Charlesa Leclerca ponad 40 punktów. Nie dojechał do mety ani w
+			            Bahrajnie ani w Australii. Później było jednak zdecydowanie lepiej.
+			            Red Bull odrabiał straty i zdecydowanie poprawił swój bolid, a Max
+			            Verstappen pobił nawet rekord zwycięstw w jednym sezonie. Sergio
+			            Perez co prawda wygrał dwa razy, ale spisywał się bardzo nierówno,
+			            dlatego nie zgarnął tytułu wicemistrza świata.
+			          </p>
+		          </div>
+		          <div class="artykul1-p">
+			          <h3>FERRARI</h3>
+			          <p>
+			            Zdecydowanie zawiodło Ferrari. Przed sezonem zapowiadano, że włoski
+			            zespół będzie mocny. Potwierdziło się to w pierwszych wyścigach.
+			            Podczas GP Bahrajnu Leclerc i Sainz uplasowali się na P1 i P2. Po
+			            pierwszych wyścigach Monakijczyk był liderem klasyfikacji generalnej
+			            z ponad czterdziestopunktową przewagą. Wraz z postępem sezonu było
+			            jednak coraz gorzej. Red Bull poprawił tempo wyścigowe i włoski
+			            zespół nie miał już takiej przewagi. Ferrari zdarzały się także
+			            awarie. Mnóstwo było także błędów strategicznych, które odebrały
+			            włoskiemu zespołowi mnóstwo punktów. Leclercowi i Sainzowi także
+			            zdarzały się błędy, dlatego mimo zdecydowanie lepszego sezonu dla
+			            Ferrari niż poprzednio, należy ocenić włoski team negatywnie.
+			          </p>
+		          </div>
+		          <div class="artykul1-p">
+			          <h3>MERCEDES</h3>
+			          <p>
+			            Mercedes miał spore problemy na początek sezonu. Ferrari i Red Bull
+			            byli zdecydowanie lepsi niż niemiecki zespół. Russell i Hamilton
+			            mieli problemy z punktowaniem i tylko dzięki błędom rywala, mogli
+			            uplasować się nieco wyżej. Tempo wyścigowe Mercedesa poprawiło się
+			            pod koniec sezonu. Podczas wyścigu o GP Brazylii udało się nawet
+			            zgarnąć dublet. Niemiecki team obudził się jednak zbyt późno i
+			            dlatego uplasował się na trzeciej pozycji w klasyfikacji generalnej.
+			          </p>
+		          </div>
+		          <div class="artykul1-p">
+			          <h3>ALPINE</h3>
+			          <p>
+			            Alpine przez cały sezon walczyło z McLarenem o czwarte miejsce w
+			            klasyfikacji generalnej. Francuski zespół prezentował się lepiej,
+			            ale często jego jednostka napędowa ulegała awarii. Gdy nie było
+			            problemów, to zarówno Ocon jak i Alonso spisywali się bardzo
+			            solidnie, dlatego zasłużenie uplasowali się na czwartej lokacie w
+			            klasyfikacji generalnej.
+			          </p>
+		          </div>
+		          <div class="artykul1-p">
+			          <h3>MCLAREN</h3>
+			          <p>
+			            Kierowcy McLarena wyglądają, jakby jechali zupełnie innymi
+			            samochodami. Lando Norris uplasował się bowiem na siódmej lokacie w
+			            generalce ze 122 punktami, a Daniel Ricciardo zdobył tylko 37 oczek,
+			            co dało mu 11. miejsce. Słaba postawa Australijczyka sprawiła, że
+			            zabraknie go podczas sezonu 2023. W jego miejsca McLaren
+			            zakontraktował obiecującego Oscara Piastriego. Być może, gdyby
+			            Daniel Ricciardo spisywał się lepiej, to Alpine nie miałoby szans z
+			            McLarenem.
+			          </p>
+		          </div>
+		          <div class="artykul1-p">
+			          <h3>ALFA ROMEO</h3>
+			          <p>
+			            Alfa Romeo zdobył 55 punktów, czyli tyle samo co Aston Martin.
+			            Początek sezonu był dla tego zespołu wymarzony. Valtteri Bottas w
+			            dwóch pierwszych wyścigach uplasował się dwa razy na P6, a podczas
+			            GP Emilia Romagna, dojechał jako piąty. Problemy rozpoczęły się po
+			            przerwie wakacyjnej, od tamtej pory Fin zapunktował tylko dwa razy.
+			            Obok Fina jeździł debiutant – Zhou. Pierwszy rok w F1 dla Chińczyka
+			            nie był zbyt udany. Zdobył tylko sześć punktów. Pod koniec kampanii
+			            udawało mu się jednak coraz częściej pokonywać Bottasa.
+			          </p>
+		          </div>
+		          <div class="artykul1-p">
+			          <h3>ASTON MARTIN</h3>
+			          <p>
+			            Aston Martin był dopiero siódmym zespołem w sezonie 2022.
+			            Reprezentowali go Sebastian Vettel i Lance Stroll. Niemiec zakończył
+			            karierę, a w jego miejsce przyjdzie Fernando Alonso. Sebastian
+			            Vettel jeździł lepiej od swojego kanadyjskiego kolegi. Szczególnie
+			            udana był końcówka sezonu, kiedy to zakończyła się runda europejska.
+			            Vettel zapunktował bowiem w aż czterech z sześciu pozostałych
+			            wyścigów. Sebastian zgarnął 37 punktów, natomiast gorzej spisujący
+			            się Lance Stroll tylko 18.
+			          </p>
+		          </div>
+		          <div class="artykul1-p">
+			          <h3>HASS</h3>
+			          <p>
+			            Haas nieoczekiwanie zajął ósme miejsce w klasyfikacji konstruktorów.
+			            Bardzo dobrym ruchem ze strony tego zespołu było ponowne
+			            zakontraktowanie Kevina Magnussena. Duńczyk zdobył aż 25 punktów i
+			            uplasował się na 13. pozycji w generalce. Wielkim jego sukcesem było
+			            wygranie kwalifikacji o GP Brazylii. Zdecydowanie gorzej
+			            zaprezentował się Mick Schumacher, któremu nie przedłużono
+			            kontraktu. Niemiec zdobył tylko 12 punktów.
+			          </p>
+		          </div>
+		          <div class="artykul1-p">
+			          <h3>ALPHATAURI</h3>
+			          <p>
+			            Alpha Tauri jest rozczarowaniem tego sezonu. W poprzedniej kampanii,
+			            Pierre Gasly był w stanie często walczyć o P6 i plasował się
+			            niejednokrotnie nad kierowcami Ferrari. Teraz Francu zdobył zaledwie
+			            23 punkty i uplasował się na 14. pozycji. Jeszcze gorszy sezon miał
+			            Yuki Tsunoda, który zgarnął tylko 12 oczek.
+			          </p>
+		          </div>
+		          <div class="artykul1-p">
+			          <h3>WILLIAMS</h3>
+			          <p>
+			            Ostatnim zespołem tegorocznej rywalizacji jest Williams. Zespół
+			            zdobył tylko osiem punktów i wyraźnie odstawał od reszty stawki.
+			            Punkty dla tego zespołu zdobywało ośmiu kierowców. Najlepiej spisał
+			            się Alex Albon, który punktował trzykrotnie i zdobył cztery oczka.
+			            Po dwa punkty zdobyli De Vries i Nicholas Latifi. Holender
+			            wystartował tylko w jednym wyścigu, za to Kanadyjczyk swoje jedyne
+			            dwa punkty zdobył pod koniec sezonu. Słaba postawa Latifiego
+			            spowodowała, że nie zobaczymy go w przyszłym roku w F1.
+			          </p>
+		          </div>
 		      </div>
 		    </div>
 		  </div>
