--- a/jsf_f1blog_web/WebContent/pages/artykuly.xhtml
+++ b/jsf_f1blog_web/WebContent/pages/artykuly.xhtml
@@ -61,14 +61,23 @@
 		      		</div>
 		    	</div>
 		
-		    <div class="artykul-content" onclick="location.href='artykul2.xhtml'">
-		    	<div class="artykul-img">
-		    		<h:graphicImage library="images" name="wyniki2022.jpg" />
-		      	</div>
-		      	<div class="artykul-text">
-		        	<h3>Wyniki w sezonie 2022 - Marcysiox</h3>
-		      	</div>
-		    </div>
+			    <div class="artykul-content" onclick="location.href='artykul2.xhtml'">
+			    	<div class="artykul-img">
+			    		<h:graphicImage library="images" name="wyniki2022.jpg" />
+			      	</div>
+			      	<div class="artykul-text">
+			        	<h3>Podsumowanie sezonu 2022 - Marcysiox</h3>
+			      	</div>
+			    </div>
+			    
+			    <div class="artykul-content" onclick="location.href='artykul3.xhtml'">
+			    	<div class="artykul-img">
+			    		<h:graphicImage library="images" name="wyniki2023.jpg" />
+			      	</div>
+			      	<div class="artykul-text">
+			        	<h3>Wyniki w sezonie 2023 - Marcysiox</h3>
+			      	</div>
+			    </div>
 		  </div>
 		</div>
 	</ui:define>
