--- a/jsf_f1blog_web/WebContent/pages/public.xhtml
+++ b/jsf_f1blog_web/WebContent/pages/public.xhtml
@@ -32,7 +32,7 @@
 		    <div class="author"><h4>Autor: Marcin Chowaniec</h4></div>
 		    <div class="log-btn">
 		    	<h:form>
-		    		<h:commandButton value="Logowanie" styleClass="btn"  action="#{userBB.goToLogin()}" />
+		    		<h:commandButton value="#{txtButtons.publicBtn}" styleClass="btn"  action="#{userBB.goToLogin()}" />
 		    	</h:form>
 		    </div>
 		  </div>
